tailcall-query-plan/src/snapshots/tailcall__query_plan__tests__Post_execution_plan.snap
---
source: src/query_plan/tests.rs
expression: execution_plan
---
Sequential:
    Resolve(0)
    Resolve(1)
    Resolve(2)
