tailcall-query-plan/src/snapshots/tailcall__query_plan__tests__PostsComplex_execution_plan.snap
---
source: src/query_plan/tests.rs
expression: execution_plan
---
Sequential:
    Resolve(3)
    Resolve(4)
    Resolve(5)
