tailcall-query-plan/src/snapshots/tailcall__query_plan__tests__PostsComplex_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 3)
            title
            body
            user(by 4)
                name
                username
                website(by 5)

    selections:
        Resolver(5):

        Resolver(4):
                name
                username

        Resolver(3):
                title
                body
