tailcall-query-plan/src/snapshots/tailcall__query_plan__tests__PostsSimple_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 3)
            title

    selections:
        Resolver(3):
                title
