tailcall-query-plan/src/snapshots/tailcall__query_plan__tests__User_output.snap
---
source: src/query_plan/tests.rs
expression: result
---
{
  "user": {
    "name": "Leanne Graham",
    "email": "Sincere@april.biz"
  }
}
